packages/core/src/navigation/_navigation-styles.scss
/* ... */
.#{$option-prefix} {
  align-items: center;
  box-sizing: border-box;
  display: grid;
  flex-shrink: 1;
  gap: spacing.semantic-variable(gap, tight);
  height: unset;
  width: 100%;

  &--hidden {
    display: none;
  }

  &__content {
    align-items: center;
    border-radius: radius.variable(base);
    border: none;
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    outline: none;
    overflow: hidden;
    width: 100%;
    gap: spacing.semantic-variable(gap, tight);
    padding: spacing.semantic-variable(padding, vertical, tight)
      spacing.semantic-variable(padding, horizontal, tight-fixed);
    transition: transition.standard(background-color, fast), transition.standard(color, fast);
    text-decoration: none;

    .#{$option-prefix}__title {
      @include typography.semantic-variable(label-primary-highlight, (line-height));

      color: palette.semantic-variable(text, neutral-solid);
      line-height: #{$option-icon-size};
      margin-right: auto;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }

    .#{$option-prefix}__icon {
      color: palette.semantic-variable(icon, neutral);
      height: #{$option-icon-size};
      width: #{$option-icon-size};
    }

    .#{$option-prefix}__toggle-icon {
      color: palette.semantic-variable(icon, neutral);
      height: spacing.semantic-variable(size, element, slim);
      width: spacing.semantic-variable(size, element, slim);
    }

    &:hover {
      .#{$option-prefix}__icon,
      .#{$option-prefix}__toggle-icon {
        color: palette.semantic-variable(icon, neutral-solid);
      }

      background-color: palette.semantic-variable('background', neutral-faint);
    }

    &:focus-visible {
      box-shadow: effect.variable(focus, primary);
    }
  }

  &--active.#{$option-prefix}--open {
    & > .#{$option-prefix}__content {
      background-color: palette.semantic-variable('background', brand-ghost);
    }
  }

  &--active {
    & > .#{$option-prefix}__content {
      .#{$option-prefix}__title {
        color: palette.semantic-variable(text, brand);
      }

      .#{$option-prefix}__icon {
        color: palette.semantic-variable(icon, brand);
      }
    }
  }

  &--active.#{$option-prefix}--basic {
    & > .#{$option-prefix}__content {
      background-color: palette.semantic-variable('background', brand-faint);

      .#{$option-prefix}__title {
        color: palette.semantic-variable(text, brand-solid);
      }

      .#{$option-prefix}__icon {
        color: palette.semantic-variable(icon, brand-solid);
      }
    }
  }

  &__group {
    @include utils.reset();

    display: grid;
    gap: spacing.semantic-variable(gap, tight);
  }


  &--level-1 {
    margin-left: 0;
  }

  &--level-2 {
    margin-left: spacing.semantic-variable(padding, horizontal, relaxed);
    width: calc(
      100% - spacing.semantic-variable(padding, horizontal, relaxed)
    );

    .#{$option-prefix}__title {
      @include typography.semantic-variable(label-secondary, (line-height));
    }
  }

  &--level-3 {
    margin-left: spacing.semantic-variable(padding, horizontal, breath);
    width: calc(100% - spacing.semantic-variable(padding, horizontal, breath));

    .#{$option-prefix}__title {
      @include typography.semantic-variable(label-secondary, (line-height));
    }
  }

  &--collapsed {
    .#{$option-prefix}__children-wrapper {
      display: none;
    }

    .#{$option-prefix}__content {
      > :not(:first-child, .mzn-tooltip) {
        display: none;
      }
    }

    .#{$option-prefix}__title {
      @include typography.semantic-variable(label-secondary, (line-height));

      text-overflow: clip;
    }
  }
}

.#{$icon-button-prefix} {
  @include btn-utils.reset();

  align-items: center;
  justify-content: center;
  border-radius: radius.variable(base);
  box-sizing: border-box;
  color: palette.semantic-variable(icon, neutral);
  display: flex;
  padding: spacing.semantic-variable(padding, vertical, tight-fixed)
    spacing.semantic-variable(padding, horizontal, tight-fixed);
  transition: transition.standard(background-color, fast);
  width: spacing.semantic-variable(size, element, airy);
  height: spacing.semantic-variable(size, element, airy);

  &:hover {
    background-color: palette.semantic-variable('background', neutral-faint);
  }

  &:focus-visible {
    box-shadow: effect.variable(focus, primary);
  }
}
/* ... */

